--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
 
-  <title>Hexacom</title>
+  <title>Rehmania Herbs</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -37,7 +37,7 @@
 
   <!-- // Other stuff -->
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_MAP_KEY_HERE&loading=async&callback=Function.prototype"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhUNZjxsnyZA6mnOalo-v6169wAhh7gYs&loading=async&callback=Function.prototype"></script>
 
   <script type="application/javascript" src="/assets/packages/flutter_inappwebview_web/assets/web/web_support.js" defer></script>
 
@@ -98,13 +98,13 @@
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 an later, measurementId is optional
   var firebaseConfig = {
-    apiKey: "AIzaSyBCtDfdfPqxXDO6rDNlmQC1VJOtuy",
-    authDomain: "gem-b5006.firebaseapp.com",
-    projectId: "gem-b5006",
-    storageBucket: "gem-b5006.appspot.com",
-    messagingSenderId: "384321080318",
-    appId: "1:384321080318:web:9cf2ec92c0eaf",
-    measurementId: "G-RQ899NQVHN",
+    apiKey: "AIzaSyCwsgYo1L6w-PSXl-ybA1ixVauuy6L4VUc",
+    authDomain: "rehmaniaherbssgd.firebaseapp.com",
+    projectId: "rehmaniaherbssgd",
+    storageBucket: "rehmaniaherbssgd.firebasestorage.app",
+    messagingSenderId: "58266174967",
+    appId: "1:582661749671:web:1dc6a6cbfd3bf4f96d1482",
+    measurementId: "G-JD9Y0QF5TT",
   };
   // Initialize Firebasefi
   firebase.initializeApp(firebaseConfig);
